fix: improving indentation
