# src/routes/categories.routes.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import multer from 'multer';
-import "reflect-metadata";
+import 'reflect-metadata';
 import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
 import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController';
 import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
@@ -11,14 +11,14 @@ const upload = multer({
   dest: './tmp',
 });
 
-const createCategoryController = new CreateCategoryController()
-const listCategoriesController = new ListCategoriesController()
-const importCategoryController = new ImportCategoryController()
+const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
 categoriesRoutes.post('/', createCategoryController.handle);
 
 categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'),importCategoryController.handle );
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 export { categoriesRoutes };
