# src/routes/index.ts
@@ -1,14 +1,12 @@
-import { Router } from "express";
-import { specificationsRoutes } from "./specifications.routes";
-import { categoriesRoutes } from "./categories.routes";
-import { userRoutes } from "./Users.routes";
+import { Router } from 'express';
+import { specificationsRoutes } from './specifications.routes';
+import { categoriesRoutes } from './categories.routes';
+import { userRoutes } from './Users.routes';
 
+const router = Router();
 
-const router = Router()
+router.use('/categories', categoriesRoutes);
+router.use('/specifications', specificationsRoutes);
+router.use('/users', userRoutes);
 
-router.use('/categories', categoriesRoutes)
-router.use('/specifications', specificationsRoutes)
-router.use('/users',userRoutes)
-
-
-export {router}
+export { router };
