# src/swagger.json
@@ -11,9 +11,7 @@
   "paths": {
     "/categories": {
       "post": {
-        "tags": [
-          "Category"
-        ],
+        "tags": ["Category"],
         "summary": "Create a category",
         "description": "Create a new category",
         "requestBody": {
@@ -47,9 +45,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Category"
-        ],
+        "tags": ["Category"],
         "summary": "List all categories",
         "description": "List all categories",
         "responses": {
@@ -79,9 +75,7 @@
     },
     "/categories/import": {
       "post": {
-        "tags": [
-          "Category"
-        ],
+        "tags": ["Category"],
         "summary": "Upload a new category",
         "description": "Upload a new category",
         "requestBody": {
@@ -89,28 +83,26 @@
             "multipart/form-data": {
               "schema": {
                 "type": "object",
-                "properties":{
-                  "file":{
-                  "type":"string",
-                  "format":"binary"
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
                 }
-              }
               }
             }
           }
         },
-         "responses": {
+        "responses": {
           "201": {
             "description": "Created"
+          }
+        }
       }
-    }
-  }
-},
+    },
     "/specifications": {
       "post": {
-        "tags": [
-          "Specifications"
-        ],
+        "tags": ["Specifications"],
         "summary": "Create a specification",
         "description": "Cretae a new specification",
         "requestBody": {
